Add nav for page navigation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
         <title>Vince Montegrande</title>
     </head>
     <body>
+        <header>
+            <nav>
+                <a href="index.html">Vince Montegrande</a>
+                <ul>
+                    <li><a href="/pages/experiments.html">Experiments</a></li>
+                    <li><a href="/pages/projects.html">Projects</a></li>
+                    <li><a href="/pages/about.html">About</a></li>
+                    <li><a href="/pages/contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
+        <hr>
+
+        <main>
+
+        </main>
+
+        <hr>
+
+        <footer>
+
+        </footer>
     </body>
 </html>
