--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,6 +6,28 @@
         <title>Contact</title>
     </head>
     <body>
+        <header>
+            <nav>
+                <a href="../index.html">Vince Montegrande</a>
+                <ul>
+                    <li><a href="experiments.html">Experiments</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
+        <hr>
+
+        <main>
+
+        </main>
+
+        <hr>
+
+        <footer>
+
+        </footer>
     </body>
 </html>
