Add home page headshot and description

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
         <hr>
 
         <main>
-
+            <img src="assets/images/headshot.jpg" alt="Picture of me, Vince Montegrande" width="160" height="210">
+            <p>I'm <strong>Vince Montegrande</strong>, an college student and aspiring web developer!</p>
         </main>
 
         <hr>
 
         <footer>
-
+            
         </footer>
     </body>
 </html>
