Add website Github and copyright to footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <hr>
 
         <footer>
-            
+            <a href="https://github.com/vlmontegrande/cse134b-hw2.git">Website Github</a>
+            <!--Apparently <small> is for copyright. I'm so semantic rn-->
+            <p><small>&copy; 2025 Vince Montegrande</small></p>
         </footer>
     </body>
 </html>
