--- a/pages/about.html
+++ b/pages/about.html
@@ -27,7 +27,8 @@
         <hr>
 
         <footer>
-
+            <a href="https://github.com/vlmontegrande/cse134b-hw2.git">Website Github</a>
+            <p><small>&copy; 2025 Vince Montegrande</small></p>
         </footer>
     </body>
 </html>
