Finish about content besides Video Games and Languages section in Interests

--- a/pages/about.html
+++ b/pages/about.html
@@ -21,7 +21,67 @@
         <hr>
 
         <main>
+            <h1>About me</h1>
+            <section>
+                <figure>
+                    <img src="../assets/images/martinez-landscape.jpg" alt="A landscape picture of Martinez, CA" width="900" height="225">
+                    <figcaption>A landscape picture of Martinez, CA</figcaption>
+                </figure>
 
+                <h2>Bio</h2>
+                <p>
+                    I was born in San Diego. When I was very young, my family moved to the Bay Area. We bounced around for a little bit near
+                    Berkeley before settling in the small town of Martinez. 
+                </p>
+                <aside>
+                    <p>
+                        Martinez is actually the hometown of naturalist John Muir!
+                    </p>
+                </aside>
+                <p>
+                    Sometime in high school, I became interested in computer science, and in college, I was enamored with web development. 
+                    I decided to pursue this as my career path!
+                </p>
+            </section>
+
+            <section>
+                <h2>Skills and Education</h2>
+                <p>
+                    I'm currently a third-year Math-Computer Science major at UCSD. My skills currently encompass 
+                    <em>HTML, CSS, and Javascript</em>, and also <em>React and Next.js</em> (sorry <abbr>Prof.</abbr> Powell). Also, if you
+                    ever need a qualified ice cream/dessert expert, I've worked at both Baskin-Robbins and Matcha Cafe Maiko. 
+                </p>
+            </section>
+
+            <section>
+                <h2>Interests</h2>
+
+                <h3>Music</h3>
+                <p>
+                    I grew up playing the piano. I took lessons for a while but now I play every once in a while. Recently, I've been more 
+                    interested in the acoustic guitar. I'm still an amateur, but I'm learning!
+                </p>
+                <p>
+                    My favorite artists according to my Spotify wrapped for 2024 are:
+                </p>
+                <ol>
+                    <li>Kendrick Lamar</li>
+                    <li>Olivia Rodrigo</li>
+                    <li>Kanye West</li>
+                    <li>Laufey</li>
+                    <li>Tyler, The Creator</li>
+                </ol>
+                <p>
+                    I love going to concerts and live events; in fact, I've already gone to see Laufey and I'm seeing Kendrick and Tyler
+                    this year!
+                </p>
+
+                <h3>Video Games</h3>
+
+                <h3>Sports</h3>
+
+                <h3>Languages</h3>
+            </section>
         </main>
 
         <hr>
