Add tailwind to skills

--- a/pages/about.html
+++ b/pages/about.html
@@ -48,7 +48,7 @@
                 <h2>Skills and Education</h2>
                 <p>
                     I'm currently a third-year Math-Computer Science major at UCSD. My skills currently encompass 
-                    <em>HTML, CSS, and Javascript</em>, and also <em>React and Next.js</em> (sorry <abbr>Prof.</abbr> Powell). Also, if you
+                    <em>HTML, CSS, and Javascript</em>, and also <em>React, Tailwind, and Next.js</em> (sorry <abbr>Prof.</abbr> Powell). Also, if you
                     ever need a qualified ice cream/dessert expert, I've worked at both Baskin-Robbins and Matcha Cafe Maiko. 
                 </p>
             </section>
