Change "if you" to "to"... cause why not

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -67,7 +67,7 @@
               <address>
                 <p>Email: vlmontegrande@gmail.com</p>
                 <p>Github: vlmontegrande</p>
-                <p>Steam: Meloncab (Hit me up if you play Rivals of Aether)</p>
+                <p>Steam: Meloncab (Hit me up to play Rivals of Aether)</p>
                 <p>Location: San Diego</p>
                 <p>SSN: <del>987-65-4320</del> <ins>unknown</ins></p>
             </address>
