Add projects and search bar in projects page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -21,7 +21,42 @@
         <hr>
 
         <main>
+            <section>
+                <search>
+                    <form>
+                        <label for="project">Find a project</label>
+                        <input type="search" id="project" name="project">
+                        <button type="submit">Search</button>
+                    </form>
+                </search>
+                <hgroup>
+                    <h1>
+                        CSE134B Homework 1
+                    </h1>
+                    <p>
+                        This was a project to modify a site, host it on Netlify, and play around with it.
+                    </p>
+                </hgroup>
+                <iframe
+                    width="1000"
+                    height="500"
+                    src="https://regal-wisp-91b064.netlify.app/"
+                >
+                </iframe>
 
+                <hgroup>
+                    <h1>
+                        Smoothbrain
+                    </h1>
+                    <p>
+                        This is a WIP website built with React and Next.js. It is a Jackbox clone with custom UI and backend.
+                    </p>
+                </hgroup>
+                <picture>
+                    <source srcset="../assets/images/smoothbrain-mobile-screenshot.png" media="(orientation: portrait)" width="300">
+                    <img src="../assets/images/smoothbrain-screenshot.png" alt="A screenshot of the Smoothbrain UI" width="1000">
+                </picture>
+            </section>
         </main>
 
         <hr>
