--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <nav>
-                <a href="../index.html">Vince Montegrande</a>
+                <a href="index.html">Vince Montegrande</a>
                 <ul>
                     <li><a href="experiments.html">Experiments</a></li>
                     <li><a href="projects.html">Projects</a></li>
