--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
             <nav>
                 <a href="index.html">Vince Montegrande</a>
                 <ul>
-                    <li><a href="/pages/experiments.html">Experiments</a></li>
-                    <li><a href="/pages/projects.html">Projects</a></li>
-                    <li><a href="/pages/about.html">About</a></li>
-                    <li><a href="/pages/contact.html">Contact</a></li>
+                    <li><a href="experiments.html">Experiments</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
