--- a/experiments.html
+++ b/experiments.html
@@ -6,7 +6,7 @@
         <title>Experiments</title>
         <link rel="stylesheet" href="../assets/css/style.css">
         <style>
-            testimonial[data-color="yellow"] {
+            real-testimonial[data-color="yellow"] {
                 display: block;
                 background-color: #e8f145;
                 border-radius: 8px;
@@ -14,7 +14,7 @@
                 margin: 20px 0;
             }
 
-            testimonial[data-color="blue"] {
+            real-testimonial[data-color="blue"] {
                 display: block;
                 background-color: #3f5cd1;
                 border-radius: 8px;
@@ -22,12 +22,12 @@
                 margin: 20px 0;
             }
 
-            testimonial blockquote {
+            real-testimonial blockquote {
                 font-size: 2em;
                 margin: 0;
             }
 
-            testimonial footer {
+            real-testimonial footer {
                 font-size: 1.5em;
                 margin-top: 10px;
                 font-weight: bold;
@@ -62,76 +62,74 @@
                 customElements.define('hello-world', HelloWorld);
             </script>
 
-            <section>
 
-                <h1><strong>REAL</strong> Customer Testimonials</h1>
+            <h1><strong>REAL</strong> Customer testimonials</h1>
 
-                <testimonial data-color="blue">
-                    <blockquote>
-                        "vince is super cool and epic and my best student ever"
-                    </blockquote>
-                    <footer>-Professor Powell (no relation to the professor at UCSD)</footer>
-                </testimonial>
+            <real-testimonial data-color="blue">
+                <blockquote>
+                    "vince is super cool and epic and my best student ever"
+                </blockquote>
+                <footer>-Professor Powell (no relation to the professor at UCSD)</footer>
+            </real-testimonial>
 
-                <br>
+            <br>
 
-                <testimonial data-color="yellow">
-                    <blockquote>
-                        <!-- Funny tailwind class -->
-                        <div class="flex justify-center items-center h-screen bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 text-white font-bold p-8 m-4 rounded-lg shadow-xl hover:bg-opacity-75 focus:ring-4 focus:ring-blue-500 focus:ring-opacity-50 transform transition-all duration-300 ease-in-out md:flex-row lg:text-xl xl:bg-blue-300 2xl:text-3xl">
-                            "Man that's crazy that he knows how to use divs correctly and also <b>bold</b> and <i>italics</i>"
-                        </div>
-                    </blockquote>
-                    <footer><span>-Alan Turing</span></footer>
-                </testimonial>
+            <real-testimonial data-color="yellow">
+                <blockquote>
+                    <!-- Funny tailwind class -->
+                    <div class="flex justify-center items-center h-screen bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 text-white font-bold p-8 m-4 rounded-lg shadow-xl hover:bg-opacity-75 focus:ring-4 focus:ring-blue-500 focus:ring-opacity-50 transform transition-all duration-300 ease-in-out md:flex-row lg:text-xl xl:bg-blue-300 2xl:text-3xl">
+                        "Man that's crazy that he knows how to use divs correctly and also <b>bold</b> and <i>italics</i>"
+                    </div>
+                </blockquote>
+                <footer><span>-Alan Turing</span></footer>
+            </real-testimonial>
 
-                <br>
+            <br>
 
-                <testimonial data-color="blue">
-                    <audio controls>
-                        <source src="../assets/audio/wilhelm-scream.mp3" type="audio/mp3">
-                        Audio did not load correctly.
-                    </audio>
-                    <footer>Here are the words of a satisfied customer</footer>
-                </testimonial>
+            <real-testimonial data-color="blue">
+                <audio controls>
+                    <source src="../assets/audio/wilhelm-scream.mp3" type="audio/mp3">
+                    Audio did not load correctly.
+                </audio>
+                <footer>Here are the words of a satisfied customer</footer>
+            </real-testimonial>
 
-                <br>
+            <br>
 
-                <testimonial data-color="yellow">
-                    <video controls width="500">
-                        <source src="../assets/video/man-with-glasses.mp4" type="video/mp4">
-                        Video did not load correctly.
-                    </video>
-                    <footer>I told this man to smile and push up his glasses if I made him a banger website</footer>
-                </testimonial>
+            <real-testimonial data-color="yellow">
+                <video controls width="500">
+                    <source src="../assets/video/man-with-glasses.mp4" type="video/mp4">
+                    Video did not load correctly.
+                </video>
+                <footer>I told this man to smile and push up his glasses if I made him a banger website</footer>
+            </real-testimonial>
 
-                <testimonial data-color="blue">
-                    <blockquote>
-                        "Vince is really good at webdev"
-                    </blockquote>
-                    <footer><cite>Proverbs</cite> 3:4-5</footer>
-                </testimonial>
+            <real-testimonial data-color="blue">
+                <blockquote>
+                    "Vince is really good at webdev"
+                </blockquote>
+                <footer><cite>Proverbs</cite> 3:4-5</footer>
+            </real-testimonial>
 
-                <testimonial data-color="yellow">
-                    <blockquote>
-                        "Here's a circle"
-                    </blockquote>
-                    <footer>
-                        <p>
-                            <svg width="100" height="100">
-                                <circle cx="50" cy="50" r="40"></circle>
-                            </svg>
-                            -Euclid
-                        </p>
-                    </footer>
-                </testimonial>
-
-                <dialog open>
+            <real-testimonial data-color="yellow">
+                <blockquote>
+                    "Here's a circle"
+                </blockquote>
+                <footer>
                     <p>
-                        Here's a rectangle
+                        <svg width="100" height="100">
+                            <circle cx="50" cy="50" r="40"></circle>
+                        </svg>
+                        -Euclid
                     </p>
-                </dialog>
-            </section>
+                </footer>
+            </real-testimonial>
+
+            <dialog open>
+                <p>
+                    Here's a rectangle
+                </p>
+            </dialog>
 
             <canvas>Canvas didn't load correctly</canvas>
             <script></script>
